# qweave

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.en.md  README.md  SECURITY.md  pyproject.toml
.github/release-notes/: v0.5.0.md  v0.6.0.md
.github/workflows/: ci.yml  release.yml
crates/qfactors-core/: Cargo.toml
crates/qfactors-core/src/: alpha.rs  alpha_catalog.rs  alpha_dag.rs  alpha_eval.rs  alpha_registry.rs  cellset.rs  compute_alpha.rs  compute_panel.rs  compute_sink.rs  error.rs  expr.rs  factor_catalog.rs  group.rs  layout.rs  lib.rs  prepared_panel.rs
crates/qfactors-eval/: Cargo.toml
crates/qfactors-eval/src/: context.rs  correlation.rs  error.rs  evaluate.rs  flows.rs  labels.rs  lib.rs  metrics.rs  panel.rs  report.rs  report_template.html
crates/qfactors-factors/: Cargo.toml
crates/qfactors-factors/src/: alphas.rs  lib.rs  worldquant101.rs
crates/qfactors-factors/tests/fixtures/: golden_alphas.parquet
crates/qfactors-macros/: Cargo.toml
crates/qfactors-macros/src/: lib.rs
crates/qfactors-macros/tests/: trybuild.rs
crates/qfactors-macros/tests/ui/: fail_param_mismatch.rs  fail_param_mismatch.stderr  pass_params.rs
crates/qfactors-py/: Cargo.toml  qfactors.pyi
crates/qfactors-py/src/: eval.rs  lib.rs
crates/qfactors-server/: Cargo.toml
crates/qfactors-server/src/: assets.rs  data.rs  lib.rs  main.rs
crates/qweave-core/: Cargo.toml
crates/qweave-core/src/: alpha.rs  alpha_dag.rs  alpha_eval.rs  cellset.rs  compute_alpha.rs  compute_sink.rs  error.rs  expr.rs  layout.rs  lib.rs
crates/qweave-eval/: Cargo.toml
crates/qweave-eval/src/: context.rs  correlation.rs  error.rs  evaluate.rs  factor_source.rs  flows.rs  labels.rs  lib.rs  metrics.rs  panel.rs  report.rs  report_template.html  stats.rs
crates/qweave-factors/: Cargo.toml
crates/qweave-factors/src/: gtja_alpha191.rs  lib.rs  qlib_alpha158.rs  worldquant_alpha101.rs
crates/qweave-factors/tests/fixtures/: golden_alphas.parquet  golden_gtja_alpha191.parquet  golden_qlib_alpha158.parquet
crates/qweave-py/: Cargo.toml  qweave.pyi
crates/qweave-py/src/: eval.rs  expr.rs  lib.rs
crates/qweave-server/: Cargo.toml  build.rs
crates/qweave-server/src/: data.rs  lib.rs  main.rs
docs/: architecture.en.md  architecture.md  benchmark.en.md  benchmark.md  comparison.en.md  comparison.md  development.en.md  development.md  expression_api.en.md  expression_api.md  factor_evaluation.en.md  factor_evaluation.md  gtja_alpha191.en.md  gtja_alpha191.md  gtja_alpha191_sources.en.md  gtja_alpha191_sources.md  index.en.md  index.md  qlib_alpha158.en.md  qlib_alpha158.md  worldquant101.md  worldquant_alpha101.en.md  worldquant_alpha101.md
docs/plans/: worldquant101_manifest.md
examples/: README.en.md  README.md  generate_sample_data.py  quickstart.py
examples/data/: sample_daily.parquet
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  api.ts  styles.css
frontend/src/components/: ICPanel.vue  ReturnsPanel.vue
scripts/: bench_evaluate.py  bench_factor_engines.py  compare_alphalens.py  smoke_wheel.py
tests/: test_alphas.py  test_bench_factor_engines.py  test_evaluate.py  test_flows.py  test_labels.py  test_phase0_phase1.py  test_quickstart.py
