[workspace]
members = [
    "crates/qfactors-core",
    "crates/qfactors-factors",
    "crates/qfactors-macros",
    "crates/qfactors-py",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"

[workspace.dependencies]
linkme = "0.3"
polars = { version = "0.54.4", default-features = false, features = [
    "dtype-date",
    "dtype-datetime",
    "fmt",
    "nightly",
    "parquet",
    "performant",
    "strings",
] }
proc-macro2 = "1"
pyo3 = "0.28"
pyo3-polars = "0.27.0"
quote = "1"
rayon = "1"
syn = "2"
thiserror = "2"
trybuild = "1"
