[workspace]
members = [
    "crates/qweave-core",
    "crates/qweave-eval",
    "crates/qweave-factors",
    "crates/qweave-py",
    "crates/qweave-server",
]
resolver = "3"

[workspace.package]
authors = ["zer0quant contributors"]
edition = "2024"
license = "MIT"
repository = "https://github.com/GaomingOrion/qweave"
rust-version = "1.85"
keywords = ["quant", "factors", "polars", "finance"]
categories = ["algorithms", "science"]

[workspace.dependencies]
polars = { version = "0.54.4", default-features = false, features = [
    "dtype-date",
    "dtype-datetime",
    "fmt",
    "nightly",
    "parquet",
    "performant",
    "strings",
] }
proc-macro2 = "1"
pyo3 = "0.28"
pyo3-polars = "0.27.0"
quote = "1"
rayon = "1"
syn = "2"
thiserror = "2"
trybuild = "1"
