[build-system]
requires = ["maturin>=1.8,<2"]
build-backend = "maturin"

[project]
name = "qweave"
version = "0.4.0"
description = "Rust-powered quantitative research workflow toolkit"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "zer0quant contributors" }]
requires-python = ">=3.10"
dependencies = ["polars>=1.0"]
keywords = ["quant", "factors", "polars", "finance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/GaomingOrion/qweave"
Repository = "https://github.com/GaomingOrion/qweave"
Issues = "https://github.com/GaomingOrion/qweave/issues"

[dependency-groups]
dev = [
    "maturin>=1.8,<2",
    "numpy>=1.26",
    "pytest>=9.0",
]

[tool.maturin]
manifest-path = "crates/qweave-py/Cargo.toml"
module-name = "qweave"
features = ["extension-module"]

[tool.uv]
package = false
