[build-system]
requires = ["maturin>=1.8,<2"]
build-backend = "maturin"

[project]
name = "qweave"
version = "0.6.0"
description = "Polars-native factor research engine powered by Rust"
readme = "README.en.md"
license = { text = "MIT" }
authors = [{ name = "GaomingOrion" }]
requires-python = ">=3.10"
dependencies = ["polars>=1.0"]
keywords = [
    "quantitative-finance",
    "factor-research",
    "alpha101",
    "alpha158",
    "factor-analysis",
    "polars",
    "rust",
    "pyo3",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/GaomingOrion/qweave"
Repository = "https://github.com/GaomingOrion/qweave"
Issues = "https://github.com/GaomingOrion/qweave/issues"
Documentation = "https://github.com/GaomingOrion/qweave/blob/master/docs/index.en.md"
Changelog = "https://github.com/GaomingOrion/qweave/blob/master/CHANGELOG.md"
Releases = "https://github.com/GaomingOrion/qweave/releases"

[dependency-groups]
dev = [
    "maturin>=1.8,<2",
    "numpy>=1.26",
    "pytest>=9.0",
]

[tool.maturin]
manifest-path = "crates/qweave-py/Cargo.toml"
module-name = "qweave"
features = ["extension-module"]
include = [
    { path = "LICENSE", format = "sdist" },
    { path = "frontend/dist/**/*", format = "sdist" },
]

[tool.uv]
package = false
