[package]
name = "qfactors-core"
version = "0.3.1"
description = "Core factor and alpha evaluation engine for qfactors"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "../../README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
linkme.workspace = true
polars.workspace = true
rayon.workspace = true
thiserror.workspace = true
