[package]
name = "qfactors-factors"
version = "0.3.1"
description = "Built-in qfactors factor and WorldQuant 101 definitions"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "../../README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
linkme.workspace = true
polars.workspace = true
qfactors-core = { path = "../qfactors-core" }
qfactors-macros = { path = "../qfactors-macros" }

[target.'cfg(not(target_os = "windows"))'.dev-dependencies]
tikv-jemallocator = "0.7.0"

[target.'cfg(target_os = "windows")'.dev-dependencies]
mimalloc = "0.1.52"
