[package]
name = "qfactors-macros"
version = "0.2.0-dev"
edition.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true, features = ["full", "parsing"] }

[dev-dependencies]
linkme.workspace = true
polars.workspace = true
qfactors-core = { path = "../qfactors-core" }
trybuild.workspace = true
