[package]
name = "qfactors-py"
version = "0.2.0-dev"
edition.workspace = true
license.workspace = true

[lib]
name = "qfactors"
crate-type = ["cdylib"]

[features]
default = []
extension-module = ["pyo3/extension-module"]

[dependencies]
polars.workspace = true
pyo3.workspace = true
pyo3-polars.workspace = true
qfactors-core = { path = "../qfactors-core" }
qfactors-factors = { path = "../qfactors-factors" }
