[package]
name = "qfactors-py"
version = "0.2.0-dev"
description = "Python extension module for qfactors"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "../../README.md"
keywords.workspace = true
categories.workspace = true

[lib]
name = "qfactors"
crate-type = ["cdylib"]

[features]
default = []
extension-module = ["pyo3/extension-module"]

[dependencies]
polars.workspace = true
pyo3.workspace = true
pyo3-polars.workspace = true
qfactors-core = { path = "../qfactors-core" }
qfactors-factors = { path = "../qfactors-factors" }

[target.'cfg(not(target_os = "windows"))'.dependencies]
tikv-jemallocator = "0.7.0"

[target.'cfg(target_os = "windows")'.dependencies]
mimalloc = "0.1.52"
