[package]
name = "qweave-core"
version = "0.6.0"
description = "Core factor and alpha evaluation engine for qweave"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "../../README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
polars.workspace = true
rayon.workspace = true
thiserror.workspace = true
