[package]
name = "qweave-factors"
version = "0.4.0"
description = "Built-in qweave factor and WorldQuant 101 definitions"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "../../README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
polars.workspace = true
qweave-core = { path = "../qweave-core" }

[target.'cfg(not(target_os = "windows"))'.dev-dependencies]
tikv-jemallocator = "0.7.0"

[target.'cfg(target_os = "windows")'.dev-dependencies]
mimalloc = "0.1.52"
